--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
                     
             </div>
             <div class="icons-div ">
-                <img src="img/school-bus.png" alt="" class="icons-align">
+                <img src="img/public-transport.png" alt="" class="icons-align">
                 <span>Viagens</span>
             </div>
             <div class="icons-div ">
                 <img src="img/wallet-passes-app.png" alt="" class="icons-align">
                 <span>Carteira</span>
+            </div>
+            <div class="icons-div ">
+                <img src="img/promotions.png" alt="" class="icons-align">
+                <span>Promoções</span>
+            </div>
+            <div class="icons-div ">
+                <img src="img/question.png" alt="" class="icons-align">
+                <span>Ajuda</span>
             </div>
     </footer>
         
