--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
             <form>
                 <span class="text-form-one">Saindo de</span>
-              <input type="text" name="search" value="São José dos Campos - SP" class="icon-input">
+              <input type="text" readonly="readonly" name="search" value="São José dos Campos - SP" class="icon-input icon-input-circle icon-input2">
               <span class="text-form">Indo para</span>
-              <input type="text" name="search" value="São Paulo - SP" class="icon-input">
+              <input type="text" readonly="readonly" name="search" value="São Paulo - SP" class="icon-input icon-input-local"> 
               <span class="text-form ">Data de ida</span>
-              <input placeholder="Ida" class="textbox-n icon-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" />
+              <input placeholder="Ida" class="textbox-n icon-input icon-input-date" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" />
               <span class="text-form">Data de volta</span>
-              <input placeholder="Volta" class="textbox-n icon-input" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" />
+              <input placeholder="Volta" class="textbox-n icon-input icon-input-date" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" />
               <input type="button" value="Buscar">
             </form>
         </div>
